--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "Cinema-Bot"
 version = "0.1.0"
-description = "Add your description here"
+description = "This is my Personal File Rename and Forward bot"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
